<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string-array name="days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string name="app_name">Travel Reminder</string>
    <string name="action_settings">Settings</string>
    <string name="button_create_new_travel_reminder">+</string>
    <string name="title_activity_create_travel_reminder">Create Travel Reminder</string>

    <string-array name="array_alert_lead_times">
        <item>0 Minutes</item>
        <item>1 Minutes</item>
        <item>3 Minutes</item>
        <item>5 Minutes</item>
        <item>10 Minutes</item>
        <item>15 Minutes</item>
        <item>20 Minutes</item>
        <item>30 Minutes</item>
        <item>45 Minutes</item>
        <item>60 Minutes</item>
    </string-array>

    <!-- Main Reminders Row -->
    <string name="PLACEHOLDER_main_reminders_row_reminder_name">REMINDER_NAME</string>
    <string name="PLACEHOLDER_main_reminders_row_reminder_details">REMINDER_DETAILS</string>
    
    <!-- Main Activity -->
    <string name="button_create_new_travel_reminder_confirm">Save Reminder</string>
    <string name="menu_delete_all">Delete All Reminders</string>
    
    <!-- REMINDER DETAILS EDIT ACTIVITY -->
    <!-- Tab Titles -->
    <string name="reminder_details_tab_title_details">DETAILS</string>
    <string name="reminder_details_tab_title_location_info">LOCATIONS</string>
    
    <string name="text_create_reminder_reminder_name">Reminder Name</string>
    <string name="text_create_reminder_desc_reminder_name">Name:</string>
    <string name="text_create_reminder_desc_reminder_alert_time">Leading Time:</string>
    
    <string name="reminder_details_general_recurring_monday">MON</string>
    <string name="reminder_details_general_recurring_tuesday">TUE</string>
    <string name="reminder_details_general_recurring_wednesday">WED</string>
    <string name="reminder_details_general_recurring_thursday">THU</string>
    <string name="reminder_details_general_recurring_friday">FRI</string>
    <string name="reminder_details_general_recurring_saturday">SAT</string>
    <string name="reminder_details_general_recurring_sunday">SUN</string>
    
    <!-- Reminder Details Location Info -->
    <string name="reminder_details_location_label_start_point">From:</string>
    <string name="reminder_details_location_label_end_point">To:</string>
    <string name="reminder_details_location_hint_start_point">Select Point on Map</string>
    <string name="reminder_details_location_hint_end_point">Select Point on Map</string>
    
    <!-- Reminder Details Travel Info -->
    <string name="reminder_details_travel_info_mode_label">Mode:</string>
    <string-array name="reminder_edit_travel_info_modes">
        <item>Driving</item>
        <item>Walking</item>
        <item>Cycling</item>
        <item>Public Transit</item>
    </string-array>
    <string name="reminder_details_travel_info_arrival_time_label">Arrival Time:</string>
    <string name="reminder_details_travel_info_recurring_label">Recurring:</string>
    <string name="reminder_edit_details_general_recurring_days_group_title">Recurring Days</string>
</resources>