<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/reminder_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:name="com.ganterd.travelreminder.fragments.ReminderEditTravelInfo"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
    
    <TextView
        android:id="@+id/reminder_edit_travel_info_mode_label"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/reminder_edit_details_general_row_height"
        android:layout_alignBottom="@+id/reminder_edit_travel_info_mode"
        android:layout_alignTop="@+id/reminder_edit_travel_info_mode"
        android:gravity="center_vertical"
        android:text="@string/reminder_details_travel_info_mode_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/reminder_edit_travel_info_mode"
		android:layout_width="fill_parent"
        android:layout_height="@dimen/reminder_edit_details_general_row_height"
        android:layout_toRightOf="@+id/reminder_edit_travel_info_mode_label"
        android:ems="10"
        android:hint="@string/reminder_details_location_hint_start_point" />

    <TextView
        android:id="@+id/reminder_edit_travel_info_arrival_time_label"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/reminder_edit_details_general_row_height"
        android:layout_alignBottom="@+id/reminder_edit_travel_info_arrival_time"
        android:layout_alignTop="@+id/reminder_edit_travel_info_arrival_time"
        android:gravity="center_vertical"
        android:text="@string/reminder_details_travel_info_arrival_time_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/reminder_edit_travel_info_arrival_time"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/reminder_edit_details_general_row_height"
        android:layout_below="@+id/reminder_edit_travel_info_mode"
        android:layout_toRightOf="@+id/reminder_edit_travel_info_arrival_time_label"
        android:ems="10"
        android:inputType="none" />
    
    <ExpandableListView
        android:id="@+id/reminder_edit_travel_info_recurring_options_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/reminder_edit_travel_info_arrival_time" >
	    
    </ExpandableListView>
    
</RelativeLayout>
